--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <script src="js/jquery-3.3.1.js"></script>
+    <script src="js/jquery-3.3.1 copy.js"></script>
     <script src="js/scripts.js"></script>
     <title>Track Suggester</title>
   </head>
   <body>
-
+      test
   </body>
 </html>
