add form and result div to html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,27 @@
     <title>Track Suggester</title>
   </head>
   <body>
-      test
+    <div class="container">
+      <form id="form-track">
+        <label for="question-one">one</label>
+        <input type="text" id="question-one">
+
+        <label id="question-two">two</label>
+        <input type="question-two" name="" value="">
+        <p>question1</p>
+        <p>question2</p>
+        <p>question3</p>
+        <p>question4</p>
+        <p>question5</p>
+
+      </form>
+    </div>
+
+    <button type="button" class="btn-info" name="btn">Submit</button>
+
+    <div class="result">
+      <p>Below are tracks which will work bext for you:<span class="track-one"></span>, <span class="track-two">,<span class="track-three">!</p>
+
+    </div>
   </body>
 </html>
