--- a/index.html
+++ b/index.html
@@ -9,26 +9,17 @@
   </head>
   <body>
     <div class="container">
-      <form id="form-track">
-        <label for="question-one">one</label>
-        <input type="text" id="question-one">
-
-        <label id="question-two">two</label>
-        <input type="question-two" name="" value="">
-        <p>question1</p>
-        <p>question2</p>
-        <p>question3</p>
-        <p>question4</p>
-        <p>question5</p>
-
+      <form id="formOne" method="post">
+        <<div class="form-group">
+            <label for="name">Name</label>
+            <input id="name" class="form-control" type="text">
+          </div>
+          <button type="Submit" class="btn btn-info">Track Suggester</button>
       </form>
-    </div>
 
-    <button type="button" class="btn-info" name="btn">Submit</button>
-
-    <div class="result">
-      <p>Below are tracks which will work bext for you:<span class="track-one"></span>, <span class="track-two">,<span class="track-three">!</p>
-
+      <div id="story">
+        <p>Hello <span class="name"></span>,</p>
+      </div>
     </div>
   </body>
 </html>
