add row and columns to show each track on index.html

--- a/index.html
+++ b/index.html
@@ -9,15 +9,53 @@
   </head>
   <body>
     <div class="container">
-      <form id="formOne" method="post">
-        <<div class="form-group">
+      <h1>Which Track Should You Learn?</h1>
+      <p>Click on the below tracks for more information</p>
+      <!--click on link to see pop up of description for each and what it is used for.-->
+      <div class="row">
+        <div class="col-md-4">
+          <h3>Ruby/Rail</h3>
+        </div>
+        <div class="col-md-4">
+          <h3>PHP/Drupa</h3>
+        </div>
+        <div class="col-md-4">
+          <h3>Java/Android</h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <h3>CSS/Design</h3>
+        </div>
+        <div class="col-md-4">
+          <h3>C#/.NET</h3>
+        </div>
+        <div class="col-md-4">
+          <h3>Ruby/React</h3>
+        </div>
+      </div>
+
+
+      <form id="formOne">
+        <div class="form-group">
             <label for="name">Name</label>
             <input id="name" class="form-control" type="text">
-          </div>
+        </div>
+        <div class="form-group">
+            <label for="name">Name</label>
+            <input id="name" class="form-control" type="text">
+        </div>
+        <div class="form-group">
+            <label for="name">Name</label>
+            <input id="name" class="form-control" type="text">
+        </div>
+
           <button type="Submit" class="btn btn-info">Track Suggester</button>
       </form>
 
       <div id="story">
+        <p>Hello <span class="name"></span>,</p>
+        <p>Hello <span class="name"></span>,</p>
         <p>Hello <span class="name"></span>,</p>
       </div>
     </div>
