add var for questions in scripts.js

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </select>
           </div>
 
-          <div class="form-group">
+          <!-- <div class="form-group">
             <label for="culture">Which company do you want to work for?</label>
             <select class="form-control" id="culture">
               <option value="1">Bring it On!</option>
@@ -80,7 +80,7 @@
               <option value="2">I don't have time for that..</option>
               <option value="3">I like everyting medium difficulty</option>
             </select>
-          </div>
+          </div> -->
 
           <button type="Submit" class="btn btn-info">Track Suggester</button>
         </form>
@@ -88,6 +88,10 @@
 
       <div id="story">
         <p>Hello <span class="name"></span>,</p>
+        <!-- <p>Hello <span class="challenge"></span>,</p>
+        <p>Hello <span class="culture"></span>,</p>
+        <p>Hello <span class="projects"></span>,</p>
+        <p>Hello <span class="location"></span>,</p> -->
 
 
       </div>
