updated questions for survey

--- a/index.html
+++ b/index.html
@@ -55,43 +55,44 @@
             </select>
           </div>
 
-          <!-- <div class="form-group">
+          <div class="form-group">
             <label for="culture">Which company do you want to work for?</label>
             <select class="form-control" id="culture">
-              <option value="1">Bring it On!</option>
-              <option value="2">I don't have time for that..</option>
-              <option value="3">I like everyting medium difficulty</option>
+              <option value="1">Spotify</option>
+              <option value="2">Salesforce</option>
+              <option value="3">GitHub</option>
             </select>
           </div>
 
           <div class="form-group">
             <label for="projects">Which of these projects inspires you?</label>
             <select class="form-control" id="projects">
-              <option value="1">Bring it On!</option>
-              <option value="2">I don't have time for that..</option>
-              <option value="3">I like everyting medium difficulty</option>
+              <option value="1">Building Awesome Websites</option>
+              <option value="2">Working in Robotics</option>
+              <option value="3">Machine Learning</option>
             </select>
           </div>
 
           <div class="form-group">
             <label for="location">Where do you want to live?</label>
             <select class="form-control" id="location">
-              <option value="1">Bring it On!</option>
-              <option value="2">I don't have time for that..</option>
-              <option value="3">I like everyting medium difficulty</option>
+              <option value="1">Portland</option>
+              <option value="2">San Francisco</option>
+              <option value="3">Seattle</option>
             </select>
-          </div> -->
+          </div>
 
           <button type="Submit" class="btn btn-info">Track Suggester</button>
+
         </form>
       </div>
 
       <div id="story">
         <p>Hello <span class="name"></span>,</p>
-        <!-- <p>Hello <span class="challenge"></span>,</p>
-        <p>Hello <span class="culture"></span>,</p>
-        <p>Hello <span class="projects"></span>,</p>
-        <p>Hello <span class="location"></span>,</p> -->
+        <p>Second <span class="challenge"></span>,</p>
+        <p>Third <span class="culture"></span>,</p>
+        <p>Fouth <span class="projects"></span>,</p>
+        <p>Fifth <span class="location"></span>,</p>
 
 
       </div>
