first working if statement with result showing on html

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
         <p>Third <span class="culture"></span>,</p>
         <p>Fouth <span class="projects"></span>,</p>
         <p>Fifth <span class="location"></span>,</p>
+        <p>Result <span class="trackResult"></span>,</p>
 
 
       </div>
