add else if statements

--- a/index.html
+++ b/index.html
@@ -88,14 +88,16 @@
       </div>
 
       <div id="story">
-        <p>Hello <span class="name"></span>,</p>
+        <!-- <p>Hello <span class="name"></span>,</p>
         <p>Second <span class="challenge"></span>,</p>
         <p>Third <span class="culture"></span>,</p>
         <p>Fouth <span class="projects"></span>,</p>
-        <p>Fifth <span class="location"></span>,</p>
+        <p>Fifth <span class="location"></span>,</p> -->
         <p>Result <span class="trackResult"></span>,</p>
+      </div>
 
-
+      <div id="other">
+        <p>This may not be for you!</p>
       </div>
     </div>
   </body>
