add toggle for definition of each track

--- a/index.html
+++ b/index.html
@@ -15,24 +15,30 @@
       <div class="bucket">
         <div class="row">
           <div class="col-md-4">
-            <h3>Ruby/Rail</h3>
+            <h3 class="trackType">Ruby/Rail</h3>
+            <p class="description">about</p>
           </div>
           <div class="col-md-4">
-            <h3>PHP/Drupa</h3>
+            <h3 class="trackType">PHP/Drupa</h3>
+            <p class="description">about</p>
           </div>
           <div class="col-md-4">
-            <h3>Java/Android</h3>
+            <h3 class="trackType">Java/Android</h3>
+            <p class="description">about</p>
           </div>
         </div>
         <div class="row">
           <div class="col-md-4">
-            <h3>CSS/Design</h3>
+            <h3 class="trackType">CSS/Design</h3>
+            <p class="description">about</p>
           </div>
           <div class="col-md-4">
-            <h3>C#/.NET</h3>
+            <h3 class="trackType">C#/.NET</h3>
+            <p class="description">about</p>
           </div>
           <div class="col-md-4">
-            <h3>Ruby/React</h3>
+            <h3 class="trackType">Ruby/React</h3>
+            <p class="description">about</p>
           </div>
         </div>
       </div>
