add definition, toggle method to show definition.

--- a/index.html
+++ b/index.html
@@ -9,42 +9,76 @@
   </head>
   <body>
     <div class="container">
-      <h1>What’s the Best Programming Language and Track to Learn for You?</h1>
+      <h1>What’s the Track for You?</h1>
       <p>Click on the below tracks for more information</p>
       <!--click on link to see pop up of description for each and what it is used for.-->
       <div class="bucket">
         <div class="row">
           <div class="col-md-4">
-            <h3 class="trackType">Ruby/Rail</h3>
-            <p class="description">about</p>
+            <div class="flash">
+              <h3 class="trackType">Ruby</h3>
+              <p class="description">Ruby is a dynamic, open source programming language with a focus on simplicity and productivity. It has an elegant syntax that is natural to read and easy to write.</p>
+              <!-- <p>https://www.ruby-lang.org/en/</p> -->
+            </div>
           </div>
           <div class="col-md-4">
-            <h3 class="trackType">PHP/Drupa</h3>
-            <p class="description">about</p>
+            <div class="flash">
+              <h3 class="trackType">PHP</h3>
+              <p class="description">PHP is a popular general-purpose scripting language that is especially suited to web development.Fast, flexible and pragmatic, PHP powers everything from your blog to the most popular websites in the world.</p>
+            </div>
           </div>
           <div class="col-md-4">
-            <h3 class="trackType">Java/Android</h3>
-            <p class="description">about</p>
+            <div class="flash">
+              <h3 class="trackType">Java</h3>
+              <p class="description">Java is a general-purpose, concurrent, strongly typed, class-based object-oriented language. It is normally compiled to the bytecode instruction set and binary format defined in the Java Virtual Machine Specification.</p>
+            </div>
           </div>
         </div>
         <div class="row">
           <div class="col-md-4">
-            <h3 class="trackType">CSS/Design</h3>
-            <p class="description">about</p>
+            <div class="flash">
+              <h3 class="trackType">CSS</h3>
+              <p class="description">CSS is a language that describes the style of an HTML document. CSS describes how HTML elements should be displayed.</p>
+            </div>
           </div>
           <div class="col-md-4">
-            <h3 class="trackType">C#/.NET</h3>
-            <p class="description">about</p>
+            <div class="flash">
+              <h3 class="trackType">C#</h3>
+              <p class="description">C# is a general-purpose, multi-paradigm programming language encompassing strong typing, imperative, declarative, functional, generic, object-oriented (class-based), and component-oriented programming disciplines.</p>
+            </div>
           </div>
           <div class="col-md-4">
-            <h3 class="trackType">Ruby/React</h3>
-            <p class="description">about</p>
+            <div class="flash">
+              <h3 class="trackType">React</h3>
+              <p class="description">A JavaScript library for building user interfaces</p>
+            </div>
+          </div>
+        </div>
+          <div class="row">
+            <div class="col-md-4">
+              <div class="flash">
+                <h3 class="trackType">Drupal</h3>
+                <p class="description">Drupal is content management software. It's used to make many of the websites and applications you use every day. Drupal has great standard features, like easy content authoring, reliable performance, and excellent security. But what sets it apart is its flexibility; modularity is one of its core principles. Its tools help you build the versatile, structured content that dynamic web experiences need.</p>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="flash">
+                <h3 class="trackType">Android</h3>
+                <p class="description">Android is the world's most popular mobile operating system, powering billions of devices ranging from phones to watches, tablets, TVs, and more.</p>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="flash">
+                <h3 class="trackType">.NET</h3>
+                <p class="description">.NET is a free, cross-platform, open source developer platform for building many different types of applications.With .NET, you can use multiple languages, editors, and libraries to build for web, mobile, desktop, gaming, and IoT.</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
 
       <div class="survey">
-        <h3>Take this survey to see which track will work for you!</h3>
+        <h3>Would you like to take a survey to see which track which best fits you?</h3>
         <form id="formOne">
           <!--remove id=name before submitting-->
           <div class="form-group">
