--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <h1>What’s the Track for You?</h1>
-      <p>Click on the below tracks for more information</p>
+      <p>Click on boxes for more information!</p>
       <!--click on link to see pop up of description for each and what it is used for.-->
       <div class="bucket">
         <div class="row">
@@ -74,65 +74,65 @@
               </div>
             </div>
           </div>
+          <button type="button" class="btn btn-success">Take Survey</button>
         </div>
       </div>
 
-      <div class="survey">
-        <h3>Would you like to take a survey to see which track which best fits you?</h3>
-        <form id="formOne">
-          <!--remove id=name before submitting-->
-          <div class="form-group">
-            <label for="name">Name</label>
-            <input id="name" class="form-control" type="text">
-          </div>
+      <div class="showSurvey">
+        <!-- <button type="button" class="takeSurvey" name="btn btn-info">Take Survey</button> -->
 
-          <div class="form-group">
-            <label for="challenge">Do you enjoy a challenge?</label>
-            <select class="form-control" id="challenge">
-              <option value="1">Bring it On!</option>
-              <option value="2">I don't have time for that..</option>
-              <option value="3">I like everyting medium difficulty</option>
-            </select>
-          </div>
+        <div class="survey">
+          <h3>Would you like to take a survey to see which track which best fits you?</h3>
+          <form id="formOne">
+            <!--remove id=name before submitting-->
+            <div class="form-group">
+              <label for="name">Name</label>
+              <input id="name" class="form-control" type="text">
+            </div>
 
-          <div class="form-group">
-            <label for="culture">Which company do you want to work for?</label>
-            <select class="form-control" id="culture">
-              <option value="1">Spotify</option>
-              <option value="2">Salesforce</option>
-              <option value="3">GitHub</option>
-            </select>
-          </div>
+            <div class="form-group">
+              <label for="challenge">Do you enjoy a challenge?</label>
+              <select class="form-control" id="challenge">
+                <option value="1">Bring it On!</option>
+                <option value="2">I don't have time for that..</option>
+                <option value="3">I like everyting medium difficulty</option>
+              </select>
+            </div>
 
-          <div class="form-group">
-            <label for="projects">Which of these projects inspires you?</label>
-            <select class="form-control" id="projects">
-              <option value="1">Building Awesome Websites</option>
-              <option value="2">Working in Robotics</option>
-              <option value="3">Machine Learning</option>
-            </select>
-          </div>
+            <div class="form-group">
+              <label for="culture">Which company do you want to work for?</label>
+              <select class="form-control" id="culture">
+                <option value="1">Spotify</option>
+                <option value="2">Salesforce</option>
+                <option value="3">GitHub</option>
+              </select>
+            </div>
 
-          <div class="form-group">
-            <label for="location">Where do you want to live?</label>
-            <select class="form-control" id="location">
-              <option value="1">Portland</option>
-              <option value="2">San Francisco</option>
-              <option value="3">Seattle</option>
-            </select>
-          </div>
+            <div class="form-group">
+              <label for="projects">Which of these projects inspires you?</label>
+              <select class="form-control" id="projects">
+                <option value="1">Building Awesome Websites</option>
+                <option value="2">Working in Robotics</option>
+                <option value="3">Machine Learning</option>
+              </select>
+            </div>
 
-          <button type="Submit" class="btn btn-info">Track Suggester</button>
+            <div class="form-group">
+              <label for="location">Where do you want to live?</label>
+              <select class="form-control" id="location">
+                <option value="1">Portland</option>
+                <option value="2">San Francisco</option>
+                <option value="3">Seattle</option>
+              </select>
+            </div>
 
-        </form>
+            <button type="Submit" class="btn btn-info">Track Suggester</button>
+
+          </form>
+        </div>
       </div>
 
       <div id="story">
-        <!-- <p>Hello <span class="name"></span>,</p>
-        <p>Second <span class="challenge"></span>,</p>
-        <p>Third <span class="culture"></span>,</p>
-        <p>Fouth <span class="projects"></span>,</p>
-        <p>Fifth <span class="location"></span>,</p> -->
         <p>Result <span class="trackResult"></span>,</p>
       </div>
 
