--- a/index.html
+++ b/index.html
@@ -81,7 +81,6 @@
 
       <div class="showSurvey">
         <div class="survey">
-          <h3>Would you like to take a survey to see which track which best fits you?</h3>
           <form id="formOne">
             <!--remove id=name before submitting-->
             <div class="form-group">
@@ -92,9 +91,9 @@
             <div class="form-group">
               <label for="challenge">Do you enjoy a challenge?</label>
               <select class="form-control" id="challenge">
-                <option value="1">I love a challenge!</option>
-                <option value="2">I don't have time for that..</option>
-                <option value="3">I like everyting medium difficulty.</option>
+                <option value="1">I Love a Challenge!</option>
+                <option value="2">I Don't Have Time for That..</option>
+                <option value="3">I Like Everyting Medium Difficulty.</option>
               </select>
             </div>
 
