--- a/index.html
+++ b/index.html
@@ -130,38 +130,41 @@
         </div>
       </div>
 
-      <div id="story">
-        <p>Hi <span class="name"></span>! We think you'll really like the <span class="trackResult"></span> tracks!</p>
-        <p><em>See</em> below for more  <strong>information</strong>:</p>
-      </div>
+      <div class="result">
+        <div id="story">
+          <p>Hi <span class="name"></span>! We think you'll really like the <span class="trackResult"></span> tracks!</p>
+          <p><em>See</em> below for more  <strong>information</strong>:</p>
+        </div>
 
-      <div id="ruby">
-        <ul>
-          <li><a href="https://www.ruby-lang.org/en/">Ruby Programming Language</a></li>
-        </ul>
-      </div>
+        <div id="ruby">
+          <ul>
+            <li><a href="https://www.ruby-lang.org/en/">Ruby Programming Language</a></li>
+          </ul>
+        </div>
 
-      <div id="php">
-        <ol>
-          <li><a href="http://www.php.net/">PHP: Hypertext Preprocessor</a></li>
-          <li></li>
-        </ol>
-      </div>
+        <div id="php">
+          <ol>
+            <li><a href="http://www.php.net/">PHP: Hypertext Preprocessor</a></li>
+            <li></li>
+          </ol>
+        </div>
 
-      <div id="java">
-        <ul>
-          <li><a href="https://docs.oracle.com/javase/7/docs/technotes/guides/language/">Java Programing Language</a> </li>
-        </ul>
-      </div>
+        <div id="java">
+          <ul>
+            <li><a href="https://docs.oracle.com/javase/7/docs/technotes/guides/language/">Java Programing Language</a> </li>
+          </ul>
+        </div>
 
-      <div id="css">
-        <ul>
-          <li><a href="https://docs.oracle.com/javase/7/docs/technotes/guides/language/">CSS Design: BootStrap</a> </li>
-        </ul>
-      </div>
+        <div id="css">
+          <ul>
+            <li><a href="https://docs.oracle.com/javase/7/docs/technotes/guides/language/">CSS Design: BootStrap</a> </li>
+          </ul>
+        </div>
 
-      <div id="other">
-        <p>We don't think coding is for you!</p>
+        <div id="other">
+          <p>We don't think coding is for you!</p>
+        </div>
+        <img class="image" src="img/img.png" alt="an image">
       </div>
     </div>
   </body>
